intro message wording

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="about">
             <div class="container">
                 <div class="jumbotron">
-                    <p>I am freelance frontend developer seeking interesting work opportunities. Currently cooperating with <a href="http://koderskapohotovost.cz">Kodérská pohotovost</a>.</p>
+                    <p>I am freelance frontend developer seeking interesting work opportunities. Currently I'm cooperating with <a href="http://koderskapohotovost.cz">Kodérská pohotovost</a>.</p>
                 </div>
 
             </div>
