--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="reference">
                     <ul>
                         <li>
-                            <a href="http://rdknvk.github.io/Shouter" class="curtained">
+                            <a href="http://radek-novak.github.io/Shouter" class="curtained">
                                 <div class="img-wrap">
                                     <img src="./images/shouter-screen.jpg" alt="shouter - typing game">
                                 </div>
@@ -109,7 +109,7 @@
                         </li>
 
                         <li>
-                            <a href="http://rdknvk.github.io/spirograph/" class="curtained">
+                            <a href="http://radek-novak.github.io/spirograph/" class="curtained">
                                 <div class="img-wrap">
                                     <img src="./images/pendulum-screen.jpg" alt="pendulum drawing">
                                 </div>
@@ -118,7 +118,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://rdknvk.github.io/acnostia/" class="curtained">
+                            <a href="http://radek-novak.github.io/acnostia/" class="curtained">
                                 <div class="img-wrap">
                                     <img src="./images/acrostia_onepage_template_by_outlinez.jpg" alt="webpage pic">
                                 </div>
@@ -127,7 +127,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://rdknvk.github.io/celeste/" class="curtained">
+                            <a href="http://radek-novak.github.io/celeste/" class="curtained">
                                 <div class="img-wrap">
                                     <img src="./images/Celeste_single.jpg" alt="webpage pic">
                                 </div>
@@ -138,7 +138,7 @@
                     </ul>
                 </div>
                 <div class="row">
-                    <p class="other">From time to time I add smaller demos to my <a href="http://codepen.io/RDKNVK/">codepen</a>. My other code can be found at <a href="https://github.com/RDKNVK">github</a>.</p>
+                    <p class="other">From time to time I add smaller demos to my <a href="http://codepen.io/RDKNVK/">codepen</a>. My other code can be found at <a href="https://github.com/Radek-Novak">github</a>.</p>
                 </div>
             </div>
         </section>
@@ -154,7 +154,7 @@
         <div class=" container">
             <!-- 2014 - Made by <a href="#about">me</a> -->
             <a href="http://www.linkedin.com/in/novakr"><i class="fa fa-linkedin-square"></i></a>
-            <a href="https://github.com/RDKNVK"><i class="fa fa-github"></i></a>
+            <a href="https://github.com/Radek-Novak"><i class="fa fa-github"></i></a>
             <a href="http://codepen.io/RDKNVK" class="codepen-logo"></a>
         </div>
     </footer>
@@ -164,15 +164,15 @@
     <script src="./scripts/lib/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="./scripts/main.js"></script>
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        
-        ga('create', 'UA-44311942-4', 'rdknvk.github.io');
-        ga('send', 'pageview');
-        
-        </script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-44311942-6', 'radek-novak.com');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 
 </html>
