--- a/html/index.html
+++ b/html/index.html
@@ -17,12 +17,11 @@
           <div class="name" itemprop="name">Radek Novák</div>
           <div class="role"><span itemprop="jobTitle">frontend developer</span> at <a href="http://strv.com" itemprop="worksFor">STRV</a></div>
         </main>
-
         <nav class="links">
           <a href="http://github.com/Radek-Novak" class="out">github</a>
           <a href="https://www.linkedin.com/in/novakr" class="out">linkedin</a>
           <a href="http://codepen.io/RDKNVK/" class="out">codepen</a>
-          <a href="mailto: radek.novak.cze@gmail.com" class="out" itemprop="email">e-mail</a>
+          <a href="mailto: radek.novak.cze@gmail.com" class="out">e-mail</a>
         </nav>
 
         <script>
