--- a/stuff/circles/index.html
+++ b/stuff/circles/index.html
@@ -1,17 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Hello React</title>
-    <script src='//cdnjs.cloudflare.com/ajax/libs/packery/1.3.0/packery.pkgd.min.js' />
-    <script src="https://fb.me/react-0.13.1.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <!-- <script src='//cdnjs.cloudflare.com/ajax/libs/masonry/3.1.5/masonry.pkgd.min.js' /> -->
+    <meta charset="utf-8">
+    <title>Circles</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../src/p5-style.css">
 </head>
 
 <body>
-    <div id="content"></div>
-    <script src="bundle.js"></script>
+        <canvas data-processing-sources="circles.pde"></canvas>
+        <p>control by dragging and pressing left and right arrows </p>
+    <script src="../src/vendor/processing.min.js"></script>
+
     <script>
     (function(b, o, i, l, e, r) {
         b.GoogleAnalyticsObject = l;
@@ -25,7 +27,7 @@
         e.src = '//www.google-analytics.com/analytics.js';
         r.parentNode.insertBefore(e, r)
     }(window, document, 'script', 'ga'));
-    ga('create', 'UA-44311942-6');
+    ga('create', 'UA-44311942-5');
     ga('send', 'pageview');
     </script>
 </body>
