Stuff page title

--- a/stuff/index.html
+++ b/stuff/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello React</title>
+    <title>Stuff</title>
     <script src='//cdnjs.cloudflare.com/ajax/libs/packery/1.3.0/packery.pkgd.min.js' />
     <script src="https://fb.me/react-0.13.1.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
