--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,15 @@
 
     </head>
     <body itemscope itemtype="http://schema.org/Person">
+        <header class="header">
+          <a href="/stuff" class="in">stuff</a>
+        </header>
         <main>
-          <div class="name" itemprop="name">Radek Novák</div>
-          <div class="role"><span itemprop="jobTitle">frontend developer</span> at <a href="http://strv.com" itemprop="worksFor">STRV</a></div>
+          <h1 class="name" itemprop="name">Radek Novák</h1>
+          <div class="role"><span itemprop="jobTitle">frontend developer</span> at <a href="http://strv.com" class="out" itemprop="worksFor">STRV</a></div>
         </main>
         <nav class="links">
+          <h1>Outbound links</h1>
           <a href="http://github.com/Radek-Novak" class="out">github</a>
           <a href="https://www.linkedin.com/in/novakr" class="out">linkedin</a>
           <a href="http://codepen.io/RDKNVK/" class="out">codepen</a>
