--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         </header>
         <main>
           <h1 class="name" itemprop="name">Radek Novák</h1>
-          <div class="role"><span itemprop="jobTitle">frontend developer</span> at <a href="http://strv.com" class="out" itemprop="worksFor">STRV</a></div>
+          <div class="role"><span itemprop="jobTitle">developer</span> at <a href="http://mycs.com" class="out" itemprop="worksFor">mycs</a></div>
         </main>
         <nav class="links">
           <h1>Outbound links</h1>
