--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><title>Radek Novák</title><meta name=description><meta name=viewport content="width=device-width, initial-scale=1"><link href="http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,&subset=latin,latin-ext" rel=stylesheet type=text/css><link href="http://fonts.googleapis.com/css?family=Abril+Fatface&subset=latin,latin-ext" rel=stylesheet type=text/css><link rel=stylesheet href=css/styles.css></head><body itemscope itemtype=http://schema.org/Person><header class=header><a href=/stuff class=in>stuff</a></header><main><h1 class=name itemprop=name>Radek Novák</h1><div class=role><span itemprop=jobTitle>developer</span> at <a href=http://mycs.com class=out itemprop=worksFor>mycs</a></div></main><nav class=links><h1>Outbound links</h1><a href=http://github.com/Radek-Novak class=out>github</a> <a href=https://www.linkedin.com/in/novakr class=out>linkedin</a> <a href="http://codepen.io/RDKNVK/" class=out>codepen</a> <a href="mailto: radek.novak.cze@gmail.com" class=out>e-mail</a></nav><script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-44311942-6');ga('send','pageview');
-        </script></body></html>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Radek Novák</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
+<script src="https://unpkg.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+
+<link rel="stylesheet" href="styles/reset.css">
+<link rel="stylesheet" href="styles/styles.css">
+
+<main id="js-list" class="card-list grid">
+  <div class="card grid-item">
+    <div class="card__content" itemscope itemtype="http://schema.org/Person">
+      <h1 class="name" itemprop="name">Radek Novák</h1>
+      <pre class="role u-center"><span itemprop="jobTitle">developer</span> at <a href="http://mycs.com" class="out" itemprop="worksFor">mycs</a></pre>
+
+      <div class="link-wrap"><a href="http://github.com/Radek-Novak" class="out">github</a></div>
+      <div class="link-wrap"><a href="https://www.linkedin.com/in/novakr" class="out">linkedin</a></div>
+      <div class="link-wrap"><a href="http://codepen.io/RDKNVK/" class="out">codepen</a></div>
+      <div class="link-wrap"><a href="mailto: radek.novak.cze@gmail.com" class="out">e-mail</a></div>
+    </div>
+  </div>
+</main>
+
+
+<script src="src/index.js"></script>
+<script src="src/ga-script.js"></script>
