--- a/stuff/one_pixel_cinema/index.html
+++ b/stuff/one_pixel_cinema/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-        <canvas data-processing-sources="one_pixel_cinema.pde"></canvas>
-    <script src="../src/vendor/processing.min.js"></script>
+    <canvas data-processing-sources="one_pixel_cinema.pde"></canvas>
+    <!-- <script src="../src/vendor/processing.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.2/processing.min.js"></script>
 
     <script>
     (function(b, o, i, l, e, r) {
