--- a/stuff/circles/index.html
+++ b/stuff/circles/index.html
@@ -12,7 +12,8 @@
 <body>
         <canvas data-processing-sources="circles.pde"></canvas>
         <p>control by dragging and pressing left and right arrows </p>
-    <script src="../src/vendor/processing.min.js"></script>
+    <!-- <script src="../src/vendor/processing.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.2/processing.min.js"></script>
 
     <script>
     (function(b, o, i, l, e, r) {
