--- a/stuff/mazal/index.html
+++ b/stuff/mazal/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-        <canvas data-processing-sources="mazal.pde"></canvas>
-        
-    <script src="../src/vendor/processing.min.js"></script>
+    <canvas data-processing-sources="mazal.pde"></canvas>
+
+    <!-- <script src="../src/vendor/processing.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.2/processing.min.js"></script>
 
     <script>
     (function(b, o, i, l, e, r) {
