add fetch polyfill

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   </div>
 </main>
 
-
+<script src="https://cdn.polyfill.io/v2/polyfill.js?features=fetch"></script>
 <script src="src/index.js"></script>
 <script src="src/ga-script.js"></script>
