--- a/linkfeed/index.html
+++ b/linkfeed/index.html
@@ -76,6 +76,13 @@
   <div class="iframewrapper"></div>
 </div>
   
+    <div class="line">
+  <button class="open">▶</button>
+  <a class="link" href="https://blog.kentcdodds.com/make-impossible-states-impossible-cf85b97795c1">Make Impossible States Impossible</a>
+  <span class="date">18-10-08 10:42:34</span>
+  <div class="iframewrapper"></div>
+</div>
+  
 
   <script src="/js/linkfeed.js"></script>
 
