--- a/linkfeed/index.html
+++ b/linkfeed/index.html
@@ -87,4 +87,5 @@
   <script src="/js/linkfeed.js"></script>
 
 
-<script src="/js/ga-script.js"></script>
+<img src="https://s3.eu-central-1.amazonaws.com/guck/guck/abcxyz.gif" />
+
