--- a/stuff/AmIinWest/index.html
+++ b/stuff/AmIinWest/index.html
@@ -20,5 +20,11 @@ button {
 
 <button id="start">Am I in East or West Berlin?</button>
 <p id="msg"></p>
-
+<iframe
+  id="map"
+  src="http://www.openstreetmap.org/export/embed.html?bbox=13.0476,52.6855,13.7769,52.3181&layer=mapnik"
+  width="500"
+  height="500"
+  frameborder="0"
+></iframe>
 <script src="./script.js"></script>
