--- a/stuff/AmIinWest/index.html
+++ b/stuff/AmIinWest/index.html
@@ -16,6 +16,10 @@ button {
   font-size: inherit;
   padding: 0.5rem;
 }
+iframe {
+  max-width: 100%;
+  max-height: 90vh;
+}
 </style>
 
 <button id="start">Am I in East or West Berlin?</button>
@@ -27,4 +31,6 @@ button {
   height="500"
   frameborder="0"
 ></iframe>
+
+<small id="coords"></small>
 <script src="./script.js"></script>
