--- a/stuff/AmIinWest/index.html
+++ b/stuff/AmIinWest/index.html
@@ -26,7 +26,7 @@ iframe {
 <p id="msg"></p>
 <iframe
   id="map"
-  src="http://www.openstreetmap.org/export/embed.html?bbox=13.0476,52.6855,13.7769,52.3181&layer=mapnik"
+  src="//www.openstreetmap.org/export/embed.html?bbox=13.0476,52.6855,13.7769,52.3181&layer=mapnik"
   width="500"
   height="500"
   frameborder="0"
